--- a/SidebarMenu/Base.lproj/Main.storyboard
+++ b/SidebarMenu/Base.lproj/Main.storyboard
@@ -317,7 +317,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="o2W-mE-s1z" kind="relationship" relationship="rootViewController" id="APh-AX-07n"/>
+                        <segue destination="vKr-uH-kTF" kind="relationship" relationship="rootViewController" id="3J1-98-o5u"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Zi-DC-yja" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -660,7 +660,7 @@
                                 <rect key="frame" x="0.0" y="22" width="375" height="243"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VgX-mL-tAj" id="ABS-I6-LgN">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="242.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="243"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="INa-P2-PFd">
@@ -742,7 +742,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="shO-si-507" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2575" y="-1399"/>
+            <point key="canvasLocation" x="2577" y="-1399"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tLO-9P-kEq">
@@ -1112,44 +1112,83 @@
             <point key="canvasLocation" x="2577" y="-630"/>
         </scene>
         <!--Scheduled Trips-->
-        <scene sceneID="ZH5-Q4-SLK">
+        <scene sceneID="AwO-rf-rdt">
             <objects>
-                <tableViewController id="o2W-mE-s1z" customClass="SettingsViewController" customModule="SidebarMenu" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Awt-Te-NoB">
+                <tableViewController id="vKr-uH-kTF" customClass="ScheduledTripsTableViewController" customModule="SidebarMenu" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="22" sectionFooterHeight="22" id="sky-WG-jr0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="84D-w9-eDJ">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="90" id="a7O-ok-3Xb" customClass="NewsTableViewCell" customModule="SidebarMenu" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="22" width="375" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="84D-w9-eDJ" id="ler-sJ-o5y">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a7O-ok-3Xb" id="VI5-4O-Ljr">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IXc-eI-fBj">
+                                            <rect key="frame" x="10" y="6" width="355" height="23.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="25" id="2Si-r5-XUp"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Woc-a2-Ug4">
+                                            <rect key="frame" x="18" y="64" width="339" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="ZGF-Hf-oz5"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
+                                            <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vNi-fI-VKh">
+                                            <rect key="frame" x="18" y="34" width="339" height="23.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="25" id="WCc-OX-4pt"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="IXc-eI-fBj" firstAttribute="leading" secondItem="VI5-4O-Ljr" secondAttribute="leading" constant="10" id="0jj-vf-hCh"/>
+                                        <constraint firstItem="Woc-a2-Ug4" firstAttribute="leading" secondItem="VI5-4O-Ljr" secondAttribute="leadingMargin" constant="10" id="KOK-7y-MlA"/>
+                                        <constraint firstItem="Woc-a2-Ug4" firstAttribute="top" secondItem="vNi-fI-VKh" secondAttribute="bottom" constant="6" id="M46-gq-nRw"/>
+                                        <constraint firstItem="vNi-fI-VKh" firstAttribute="leading" secondItem="VI5-4O-Ljr" secondAttribute="leadingMargin" constant="10" id="Us7-OM-SbV"/>
+                                        <constraint firstItem="vNi-fI-VKh" firstAttribute="top" secondItem="IXc-eI-fBj" secondAttribute="bottom" constant="6" id="XH1-30-EvD"/>
+                                        <constraint firstAttribute="trailing" secondItem="IXc-eI-fBj" secondAttribute="trailing" constant="10" id="cLu-wZ-Ryw"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="vNi-fI-VKh" secondAttribute="trailing" constant="10" id="rRg-ma-Qo9"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Woc-a2-Ug4" secondAttribute="trailing" constant="10" id="zUq-cz-4Dj"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="authorLabel" destination="Woc-a2-Ug4" id="eCn-cb-NNd"/>
+                                    <outlet property="postTitleLabel" destination="IXc-eI-fBj" id="4z4-6A-hQL"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="o2W-mE-s1z" id="Ta8-BM-wLd"/>
-                            <outlet property="delegate" destination="o2W-mE-s1z" id="ZU2-Ss-gm2"/>
+                            <outlet property="dataSource" destination="vKr-uH-kTF" id="lzv-OR-QPm"/>
+                            <outlet property="delegate" destination="vKr-uH-kTF" id="MdL-8u-oIZ"/>
                         </connections>
                     </tableView>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Scheduled Trips" id="yLd-bQ-oeD">
-                        <barButtonItem key="leftBarButtonItem" image="menu" id="QAw-2n-JSb">
-                            <connections>
-                                <action selector="menuButton:" destination="o2W-mE-s1z" id="vqh-ic-Dph"/>
-                            </connections>
-                        </barButtonItem>
+                    <navigationItem key="navigationItem" title="Scheduled Trips" id="FWI-F0-Mdj">
+                        <barButtonItem key="leftBarButtonItem" image="menu" id="wh2-GA-qbQ"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="organize" id="zfP-Ni-CBG"/>
                     </navigationItem>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="menuButton" destination="QAw-2n-JSb" id="8fq-RG-uAj"/>
+                        <outlet property="extraButton" destination="zfP-Ni-CBG" id="mrd-U9-bEb"/>
+                        <outlet property="menuButton" destination="wh2-GA-qbQ" id="nbF-55-HXU"/>
                     </connections>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mVk-7a-3Ug" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hsx-T2-QP3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2577" y="51"/>
+            <point key="canvasLocation" x="2576.8000000000002" y="50.824587706146929"/>
         </scene>
     </scenes>
     <resources>
