--- a/SidebarMenu/Base.lproj/Main.storyboard
+++ b/SidebarMenu/Base.lproj/Main.storyboard
@@ -1115,38 +1115,30 @@
         <scene sceneID="AwO-rf-rdt">
             <objects>
                 <tableViewController id="vKr-uH-kTF" customClass="ScheduledTripsTableViewController" customModule="SidebarMenu" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="22" sectionFooterHeight="22" id="sky-WG-jr0">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="114" sectionHeaderHeight="22" sectionFooterHeight="22" id="sky-WG-jr0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="90" id="a7O-ok-3Xb" customClass="NewsTableViewCell" customModule="SidebarMenu" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="22" width="375" height="90"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="114" id="a7O-ok-3Xb" customClass="ScheduledTripsTableViewCell" customModule="SidebarMenu" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="22" width="375" height="114"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a7O-ok-3Xb" id="VI5-4O-Ljr">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="113.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IXc-eI-fBj">
-                                            <rect key="frame" x="10" y="6" width="355" height="23.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="From" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IXc-eI-fBj" userLabel="From Title Label">
+                                            <rect key="frame" x="18" y="23" width="339" height="25"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="25" id="2Si-r5-XUp"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23.5" id="S4V-VB-tbf"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Woc-a2-Ug4">
-                                            <rect key="frame" x="18" y="64" width="339" height="18"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="18" id="ZGF-Hf-oz5"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
-                                            <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vNi-fI-VKh">
-                                            <rect key="frame" x="18" y="34" width="339" height="23.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vNi-fI-VKh" userLabel="To Label">
+                                            <rect key="frame" x="18" y="48" width="339" height="25"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="25" id="WCc-OX-4pt"/>
                                             </constraints>
@@ -1154,21 +1146,33 @@
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Woc-a2-Ug4" userLabel="When Label">
+                                            <rect key="frame" x="18" y="73" width="339" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="ZGF-Hf-oz5"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="xvE-2b-O1n"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
+                                            <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="IXc-eI-fBj" firstAttribute="leading" secondItem="VI5-4O-Ljr" secondAttribute="leading" constant="10" id="0jj-vf-hCh"/>
-                                        <constraint firstItem="Woc-a2-Ug4" firstAttribute="leading" secondItem="VI5-4O-Ljr" secondAttribute="leadingMargin" constant="10" id="KOK-7y-MlA"/>
-                                        <constraint firstItem="Woc-a2-Ug4" firstAttribute="top" secondItem="vNi-fI-VKh" secondAttribute="bottom" constant="6" id="M46-gq-nRw"/>
-                                        <constraint firstItem="vNi-fI-VKh" firstAttribute="leading" secondItem="VI5-4O-Ljr" secondAttribute="leadingMargin" constant="10" id="Us7-OM-SbV"/>
-                                        <constraint firstItem="vNi-fI-VKh" firstAttribute="top" secondItem="IXc-eI-fBj" secondAttribute="bottom" constant="6" id="XH1-30-EvD"/>
-                                        <constraint firstAttribute="trailing" secondItem="IXc-eI-fBj" secondAttribute="trailing" constant="10" id="cLu-wZ-Ryw"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="vNi-fI-VKh" secondAttribute="trailing" constant="10" id="rRg-ma-Qo9"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="Woc-a2-Ug4" secondAttribute="trailing" constant="10" id="zUq-cz-4Dj"/>
+                                        <constraint firstItem="vNi-fI-VKh" firstAttribute="top" secondItem="IXc-eI-fBj" secondAttribute="bottom" id="Hyr-s6-ND6"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Woc-a2-Ug4" secondAttribute="trailing" constant="10" id="PxU-NX-6Gh"/>
+                                        <constraint firstItem="IXc-eI-fBj" firstAttribute="leading" secondItem="VI5-4O-Ljr" secondAttribute="leadingMargin" constant="10" id="UAj-et-b25"/>
+                                        <constraint firstItem="Woc-a2-Ug4" firstAttribute="leading" secondItem="VI5-4O-Ljr" secondAttribute="leadingMargin" constant="10" id="VIg-1y-2LB"/>
+                                        <constraint firstItem="IXc-eI-fBj" firstAttribute="top" secondItem="VI5-4O-Ljr" secondAttribute="topMargin" constant="15" id="gk2-i0-oVe"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="vNi-fI-VKh" secondAttribute="trailing" constant="10" id="hrI-Xl-b3z"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="IXc-eI-fBj" secondAttribute="trailing" constant="10" id="ntQ-Fj-3ZO"/>
+                                        <constraint firstItem="Woc-a2-Ug4" firstAttribute="top" secondItem="vNi-fI-VKh" secondAttribute="bottom" id="q0M-lE-5UN"/>
+                                        <constraint firstItem="vNi-fI-VKh" firstAttribute="leading" secondItem="VI5-4O-Ljr" secondAttribute="leadingMargin" constant="10" id="qVf-H9-SlJ"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="authorLabel" destination="Woc-a2-Ug4" id="eCn-cb-NNd"/>
-                                    <outlet property="postTitleLabel" destination="IXc-eI-fBj" id="4z4-6A-hQL"/>
+                                    <outlet property="fromLabel" destination="IXc-eI-fBj" id="9zN-e1-cWe"/>
+                                    <outlet property="toLabel" destination="vNi-fI-VKh" id="Ru3-2h-lAc"/>
+                                    <outlet property="whenLabel" destination="Woc-a2-Ug4" id="iW5-yo-XUk"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -1188,7 +1192,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hsx-T2-QP3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2576.8000000000002" y="50.824587706146929"/>
+            <point key="canvasLocation" x="2822.5" y="84.5"/>
         </scene>
     </scenes>
     <resources>
@@ -1207,6 +1211,6 @@
         <image name="username" width="20" height="19"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4MM-WT-KCi"/>
+        <segue reference="zes-9v-hhD"/>
     </inferredMetricsTieBreakers>
 </document>
